--- a/1Day/5.css_ex3.html
+++ b/1Day/5.css_ex3.html
@@ -3,53 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
     <title>로그인페이지</title>
-
-    <style>
-        .background-title {
-            background-image: url(http://www.forest.go.kr/newkfsweb/cmm/fms/FileDown.do?atchFileId=FILE_000000010008639&fileSn=0);
-            background-size: cover;
-            background-position: center;
-            text-align: center;
-            color: white;
-            height: 300px;
-            width: 300px;
-            border-radius: 150px;
-
-            /* display flex를 사용할때는 4줄이 항상 묶여 다닌다. */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .background-title > h1 {
-            margin: 0 0 30px 0;
-        }
-
-        .background-title > h3 {
-            color: yellow;
-        }
-
-        /* 방법 1 */
-        .wrap {
-            width: 300px;
-            margin: auto;
-        }
-
-        /* 방법 2 */
-        /* .wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        } */
-
-    </style>
 </head>
 <body>
-    <div class="wrap">
-        <div class="background-title">
+    <div class="center">
+        <div class="background-title center">
             <h1>로그인 페이지</h1>
             <h3>아이디, 비밀번호를 입력해주세요</h3>
         </div>
